--- a/docker-compose.same-host-existing-ollama.yml
+++ b/docker-compose.same-host-existing-ollama.yml
@@ -3,17 +3,27 @@
 # MongoDB and other services run in containers
 
 services:
-  # Application services
+  # Frontend with integrated nginx (serves both static files and proxies backend)
   frontend:
     build:
       context: .
       dockerfile: docker/frontend/Dockerfile
     container_name: olympian-frontend
     restart: unless-stopped
+    ports:
+      - "${APP_PORT:-8080}:80"
+    environment:
+      DEPLOYMENT_MODE: same-host-existing-ollama
     depends_on:
       - backend
     networks:
       - olympian-network
+    healthcheck:
+      test: ["CMD", "/healthcheck.sh"]
+      interval: 30s
+      timeout: 5s
+      retries: 3
+      start_period: 10s
 
   backend:
     build:
@@ -39,22 +49,12 @@ services:
       - olympian-network
     extra_hosts:
       - "host.docker.internal:host-gateway"
-
-  nginx:
-    build:
-      context: .
-      dockerfile: docker/nginx/Dockerfile
-    container_name: olympian-nginx
-    restart: unless-stopped
-    environment:
-      DEPLOYMENT_MODE: same-host-existing-ollama
-    ports:
-      - "${APP_PORT:-8080}:80"
-    depends_on:
-      - frontend
-      - backend
-    networks:
-      - olympian-network
+    healthcheck:
+      test: ["CMD", "curl", "-f", "http://localhost:4000/api/health"]
+      interval: 30s
+      timeout: 5s
+      retries: 3
+      start_period: 15s
 
   # Database service only (Ollama runs on host)
   mongodb:
@@ -67,6 +67,12 @@ services:
       MONGO_INITDB_DATABASE: olympian_ai_lite
     networks:
       - olympian-network
+    healthcheck:
+      test: ["CMD", "mongosh", "--eval", "db.adminCommand('ping')"]
+      interval: 30s
+      timeout: 5s
+      retries: 3
+      start_period: 10s
 
   # Example MCP server
   mcp-filesystem:
@@ -79,6 +85,12 @@ services:
       - mcp-data:/data
     networks:
       - olympian-network
+    healthcheck:
+      test: ["CMD", "wget", "--quiet", "--tries=1", "--spider", "http://localhost:3000", "||", "exit", "1"]
+      interval: 30s
+      timeout: 5s
+      retries: 3
+      start_period: 10s
 
 volumes:
   config-data:
