--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -9,6 +9,10 @@ services:
     container_name: olympian-frontend-dev
     ports:
       - "3000:80"
+    environment:
+      - BACKEND_HOST=backend
+      - BACKEND_PORT=4000
+      - DEPLOYMENT_MODE=same-host
     depends_on:
       - backend
     networks:
