--- a/docker-compose.same-host.yml
+++ b/docker-compose.same-host.yml
@@ -13,6 +13,8 @@ services:
       - "${APP_PORT:-8080}:80"
     environment:
       DEPLOYMENT_MODE: same-host
+      BACKEND_HOST: backend
+      BACKEND_PORT: 4000
     depends_on:
       - backend
     networks:
