--- a/docker-compose.same-host-existing-ollama.yml
+++ b/docker-compose.same-host-existing-ollama.yml
@@ -14,6 +14,8 @@ services:
       - "${APP_PORT:-8080}:80"
     environment:
       DEPLOYMENT_MODE: same-host-existing-ollama
+      BACKEND_HOST: backend
+      BACKEND_PORT: 4000
     depends_on:
       - backend
     networks:
