--- a/docker/frontend/Dockerfile
+++ b/docker/frontend/Dockerfile
@@ -26,6 +26,11 @@ FROM nginx:alpine
 # Install required tools for the entrypoint script
 RUN apk add --no-cache curl
 
+# Remove default nginx configurations
+RUN rm -f /etc/nginx/conf.d/default.conf
+RUN rm -f /etc/nginx/sites-enabled/default
+RUN rm -f /etc/nginx/sites-available/default
+
 # Copy custom nginx configuration for frontend
 COPY docker/nginx/nginx.conf /etc/nginx/nginx.conf
 COPY docker/nginx/conf.d/frontend.conf /etc/nginx/conf.d/frontend.conf
@@ -37,6 +42,9 @@ RUN chmod +x /docker-entrypoint.sh
 
 # Copy built frontend files
 COPY --from=builder /app/packages/client/dist /usr/share/nginx/html
+
+# Remove any default index.html from nginx
+RUN rm -f /usr/share/nginx/html/index.nginx-debian.html
 
 # Verify files were copied
 RUN ls -la /usr/share/nginx/html && \
