--- a/docker/nginx/nginx.conf
+++ b/docker/nginx/nginx.conf
@@ -1,7 +1,5 @@
 user nginx;
-worker_processes auto;
-error_log /var/log/nginx/error.log warn;
-pid /var/run/nginx.pid;
+worker_processes 1;
 
 events {
     worker_connections 1024;
@@ -11,26 +9,9 @@ http {
     include /etc/nginx/mime.types;
     default_type application/octet-stream;
     
-    log_format main '$remote_addr - $remote_user [$time_local] "$request" '
-                    '$status $body_bytes_sent "$http_referer" '
-                    '"$http_user_agent" "$http_x_forwarded_for"';
-    
-    access_log /var/log/nginx/access.log main;
-    
     sendfile on;
-    tcp_nopush on;
-    tcp_nodelay on;
     keepalive_timeout 65;
-    types_hash_max_size 2048;
     client_max_body_size 50M;
     
-    # Gzip compression
-    gzip on;
-    gzip_vary on;
-    gzip_proxied any;
-    gzip_comp_level 6;
-    gzip_types text/plain text/css text/xml text/javascript application/json application/javascript application/xml+rss application/rss+xml application/atom+xml image/svg+xml;
-    
-    # Include deployment-specific configuration
     include /etc/nginx/conf.d/*.conf;
 }
