Fix nginx configuration conflicts - use different upstream names to prevent duplicate definitions

--- a/docker/nginx/conf.d/default.conf
+++ b/docker/nginx/conf.d/default.conf
@@ -1,4 +1,7 @@
-upstream backend {
+# Default configuration for multi-host deployment
+# This file is used only when DEPLOYMENT_MODE is NOT same-host
+
+upstream backend_multi {
     server backend:4000;
 }
 
@@ -11,12 +14,12 @@ server {
     }
     
     location /api {
-        proxy_pass http://backend;
+        proxy_pass http://backend_multi;
         proxy_set_header Host $host;
     }
     
     location /socket.io {
-        proxy_pass http://backend;
+        proxy_pass http://backend_multi;
         proxy_http_version 1.1;
         proxy_set_header Upgrade $http_upgrade;
         proxy_set_header Connection "upgrade";
