--- a/docker/nginx/conf.d/frontend.conf
+++ b/docker/nginx/conf.d/frontend.conf
@@ -1,4 +1,7 @@
-upstream backend {
+# Configuration for same-host deployment modes
+# This file is used when DEPLOYMENT_MODE includes same-host
+
+upstream backend_same {
     server backend:4000;
 }
 
@@ -11,14 +14,20 @@ server {
     }
     
     location /api {
-        proxy_pass http://backend;
+        proxy_pass http://backend_same;
         proxy_set_header Host $host;
     }
     
     location /socket.io {
-        proxy_pass http://backend;
+        proxy_pass http://backend_same;
         proxy_http_version 1.1;
         proxy_set_header Upgrade $http_upgrade;
         proxy_set_header Connection "upgrade";
+    }
+    
+    location /health {
+        access_log off;
+        return 200 "healthy\n";
+        add_header Content-Type text/plain;
     }
 }
