Ensure nginx configs are minimal and correct for production

--- a/docker/nginx/nginx.conf
+++ b/docker/nginx/nginx.conf
@@ -13,5 +13,8 @@ http {
     keepalive_timeout 65;
     client_max_body_size 50M;
     
+    # Disable nginx version in headers
+    server_tokens off;
+    
     include /etc/nginx/conf.d/*.conf;
 }
