--- a/docker/nginx/conf.d/default.conf
+++ b/docker/nginx/conf.d/default.conf
@@ -1,27 +1,33 @@
-# Default configuration for multi-host deployment
-# This file is used only when DEPLOYMENT_MODE is NOT same-host
-
-upstream backend_multi {
+# Minimal configuration for frontend serving
+upstream backend {
     server backend:4000;
 }
 
 server {
-    listen 80;
+    listen 80 default_server;
+    server_name _;
     
+    root /usr/share/nginx/html;
+    index index.html;
+    
+    # Frontend routes
     location / {
-        root /usr/share/nginx/html;
         try_files $uri $uri/ /index.html;
     }
     
+    # API proxy
     location /api {
-        proxy_pass http://backend_multi;
+        proxy_pass http://backend;
         proxy_set_header Host $host;
+        proxy_set_header X-Real-IP $remote_addr;
     }
     
+    # WebSocket proxy
     location /socket.io {
-        proxy_pass http://backend_multi;
+        proxy_pass http://backend;
         proxy_http_version 1.1;
         proxy_set_header Upgrade $http_upgrade;
         proxy_set_header Connection "upgrade";
+        proxy_set_header Host $host;
     }
 }
