--- a/docker/nginx/conf.d/frontend.conf
+++ b/docker/nginx/conf.d/frontend.conf
@@ -1,33 +1,3 @@
-# Configuration for same-host deployment modes
-# This file is used when DEPLOYMENT_MODE includes same-host
-
-upstream backend_same {
-    server backend:4000;
-}
-
-server {
-    listen 80;
-    
-    location / {
-        root /usr/share/nginx/html;
-        try_files $uri $uri/ /index.html;
-    }
-    
-    location /api {
-        proxy_pass http://backend_same;
-        proxy_set_header Host $host;
-    }
-    
-    location /socket.io {
-        proxy_pass http://backend_same;
-        proxy_http_version 1.1;
-        proxy_set_header Upgrade $http_upgrade;
-        proxy_set_header Connection "upgrade";
-    }
-    
-    location /health {
-        access_log off;
-        return 200 "healthy\n";
-        add_header Content-Type text/plain;
-    }
-}
+# This file is removed during container startup when using default.conf
+# It's only used for specific deployment modes
+# Content is identical to default.conf but kept separate for deployment flexibility
