--- a/docker/nginx/conf.d/default.conf
+++ b/docker/nginx/conf.d/default.conf
@@ -1,55 +1,2 @@
-# Minimal configuration for frontend serving
-upstream backend {
-    server backend:4000;
-}
-
-server {
-    listen 80 default_server;
-    server_name _;
-    
-    root /usr/share/nginx/html;
-    index index.html;
-    
-    # Frontend routes
-    location / {
-        try_files $uri $uri/ /index.html;
-    }
-    
-    # API proxy with extended timeouts for vision processing
-    location /api {
-        proxy_pass http://backend;
-        proxy_set_header Host $host;
-        proxy_set_header X-Real-IP $remote_addr;
-        proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
-        proxy_set_header X-Forwarded-Proto $scheme;
-        
-        # Extended timeouts for vision processing
-        proxy_connect_timeout 30s;
-        proxy_send_timeout 300s;        # 5 minutes
-        proxy_read_timeout 300s;        # 5 minutes
-        proxy_buffer_size 4k;
-        proxy_buffers 8 4k;
-        proxy_busy_buffers_size 8k;
-    }
-    
-    # WebSocket proxy with extended timeouts
-    location /socket.io {
-        proxy_pass http://backend;
-        proxy_http_version 1.1;
-        proxy_set_header Upgrade $http_upgrade;
-        proxy_set_header Connection "upgrade";
-        proxy_set_header Host $host;
-        proxy_set_header X-Real-IP $remote_addr;
-        proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
-        proxy_set_header X-Forwarded-Proto $scheme;
-        
-        # Extended timeouts for long-running chat sessions
-        proxy_connect_timeout 30s;
-        proxy_send_timeout 300s;        # 5 minutes  
-        proxy_read_timeout 300s;        # 5 minutes
-        
-        # WebSocket specific settings
-        proxy_buffering off;
-        proxy_cache off;
-    }
-}
+# This file is intentionally empty
+# All configuration is now in nginx.conf to avoid conflicts
