--- a/docker/nginx/conf.d/frontend.conf
+++ b/docker/nginx/conf.d/frontend.conf
@@ -1,3 +1,2 @@
-# This file is removed during container startup when using default.conf
-# It's only used for specific deployment modes
-# Content is identical to default.conf but kept separate for deployment flexibility
+# This file is intentionally empty
+# All configuration is now in nginx.conf to avoid conflicts
