Deprecate standalone nginx Dockerfile to prevent confusion

--- a/docker/nginx/Dockerfile
+++ b/docker/nginx/Dockerfile
@@ -1,19 +1,16 @@
-FROM nginx:alpine
+# DEPRECATED: This Dockerfile is no longer used
+# 
+# The nginx configuration is now integrated into the frontend container
+# See docker/frontend/Dockerfile for the current setup
+#
+# This file is kept for reference but should not be used
 
-# Install required tools for the entrypoint script
-RUN apk add --no-cache curl
-
-# Copy nginx configuration
-COPY docker/nginx/nginx.conf /etc/nginx/nginx.conf
-
-# Copy custom configurations for different deployment modes
-COPY docker/nginx/conf.d/ /etc/nginx/conf.d/
-
-# Create a script to select configuration based on deployment mode
-COPY docker/nginx/docker-entrypoint.sh /docker-entrypoint.sh
-RUN chmod +x /docker-entrypoint.sh
-
-EXPOSE 80
-
-ENTRYPOINT ["/docker-entrypoint.sh"]
-CMD ["nginx", "-g", "daemon off;"]
+# FROM nginx:alpine
+# RUN apk add --no-cache curl
+# COPY docker/nginx/nginx.conf /etc/nginx/nginx.conf
+# COPY docker/nginx/conf.d/ /etc/nginx/conf.d/
+# COPY docker/nginx/docker-entrypoint.sh /docker-entrypoint.sh
+# RUN chmod +x /docker-entrypoint.sh
+# EXPOSE 80
+# ENTRYPOINT ["/docker-entrypoint.sh"]
+# CMD ["nginx", "-g", "daemon off;"]
