Update .env.docker with correct MongoDB URI for containerized deployment

--- a/.env.docker
+++ b/.env.docker
@@ -28,7 +28,10 @@ NODE_ENV=production
 # Update with your actual service IPs/hostnames
 
 # MongoDB Configuration
-MONGODB_URI=mongodb://username:password@192.168.1.10:27017/olympian_ai_lite?authSource=admin
+# For containerized MongoDB (default), use:
+MONGODB_URI=mongodb://mongodb:27017/olympian_ai_lite
+# For external MongoDB, use format like:
+# MONGODB_URI=mongodb://username:password@192.168.1.10:27017/olympian_ai_lite?authSource=admin
 # Optional: MongoDB Replica Set
 # MONGODB_REPLICA_SET=rs0
 
