docs: Add documentation for EXTRA_HOSTS and clarify Ollama port requirements

--- a/.env.example
+++ b/.env.example
@@ -45,8 +45,9 @@ OLLAMA_HOST=http://localhost:11434
 # Docker same-host: Uses container name
 # OLLAMA_HOST=http://olympian-ollama:11434
 
-# Docker multi-host: External Ollama
+# Docker multi-host: External Ollama (ALWAYS include port :11434)
 # OLLAMA_HOST=http://192.168.1.11:11434
+# OLLAMA_HOST=http://ollama.example.com:11434
 
 # Multiple Ollama instances for load balancing (comma-separated)
 # OLLAMA_HOSTS=192.168.1.11:11434,192.168.1.12:11434,192.168.1.13:11434
@@ -85,11 +86,18 @@ SESSION_SECRET=your-session-secret-key-here-replace-in-production
 ALLOWED_ORIGINS=http://localhost:3000,http://localhost:8080
 
 # ===================================
-# OPTIONAL: EXTRA HOSTS (Multi-host Docker only)
+# DOCKER DNS RESOLUTION (Multi-host only)
 # ===================================
-# Add these to docker-compose.yml extra_hosts if using hostnames
-# Format: "hostname:ip"
-# EXTRA_HOSTS="mongo-host:192.168.1.10,ollama-host:192.168.1.11"
+# Add custom host entries for DNS resolution inside Docker containers
+# Format: - "hostname:ip" (note the leading dash and space)
+# Example:
+# EXTRA_HOSTS=- "ollama.prd.ihmn.fr:192.168.1.100"
+#   - "mongodb.prd.ihmn.fr:192.168.1.101"
+#   - "mcp1.local:192.168.1.110"
+#   - "mcp2.local:192.168.1.111"
+#
+# For single host:
+# EXTRA_HOSTS=- "ollama.prd.ihmn.fr:192.168.1.100"
 
 # ===================================
 # DEVELOPMENT ONLY
@@ -115,3 +123,4 @@ CHOKIDAR_USEPOLLING=false
 # MONGODB_URI=mongodb://username:password@your-mongo-host:27017/olympian_ai_lite?authSource=admin
 # OLLAMA_HOST=http://your-ollama-host:11434
 # MCP_HOSTS=your-mcp-host-1:8080,your-mcp-host-2:8080
+# EXTRA_HOSTS=- "your-ollama-host:192.168.1.100"
