🔧 Optimize Nginx config for multi-host: Extended timeouts, improved buffering for vision processing

--- a/docker/nginx/nginx.conf
+++ b/docker/nginx/nginx.conf
@@ -23,14 +23,20 @@ http {
     tcp_nodelay on;
     keepalive_timeout 65;
     types_hash_max_size 2048;
+    
+    # Optimized client body settings for image uploads
     client_max_body_size 50M;
+    client_body_buffer_size 1M;
+    client_body_timeout 60s;
+    client_header_timeout 60s;
     
     # Disable nginx version in headers
     server_tokens off;
     
-    # Upstream backend
+    # Upstream backend with keepalive
     upstream backend {
         server backend:4000;
+        keepalive 8;
     }
     
     # Main server block
@@ -54,21 +60,30 @@ http {
             add_header Cache-Control "public, immutable";
         }
         
-        # API proxy with extended timeouts for vision processing
+        # API proxy with optimized settings for vision processing
         location /api {
             proxy_pass http://backend;
+            proxy_http_version 1.1;
+            proxy_set_header Connection "";
             proxy_set_header Host $host;
             proxy_set_header X-Real-IP $remote_addr;
             proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
             proxy_set_header X-Forwarded-Proto $scheme;
             
-            # Extended timeouts for vision processing
+            # Extended timeouts for vision processing (increased to 10 minutes)
             proxy_connect_timeout 30s;
-            proxy_send_timeout 300s;
-            proxy_read_timeout 300s;
-            proxy_buffer_size 4k;
-            proxy_buffers 8 4k;
-            proxy_busy_buffers_size 8k;
+            proxy_send_timeout 600s;
+            proxy_read_timeout 600s;
+            
+            # Optimized buffering for large requests
+            proxy_buffering on;
+            proxy_buffer_size 8k;
+            proxy_buffers 16 8k;
+            proxy_busy_buffers_size 16k;
+            proxy_temp_file_write_size 16k;
+            
+            # Disable proxy request buffering for streaming
+            proxy_request_buffering off;
         }
         
         # WebSocket proxy
@@ -84,8 +99,8 @@ http {
             
             # Extended timeouts for long-running sessions
             proxy_connect_timeout 30s;
-            proxy_send_timeout 300s;
-            proxy_read_timeout 300s;
+            proxy_send_timeout 600s;
+            proxy_read_timeout 600s;
             
             # WebSocket specific settings
             proxy_buffering off;
