--- a/docker-compose.prod.yml
+++ b/docker-compose.prod.yml
@@ -100,9 +100,9 @@ services:
         reservations:
           memory: 1G
           cpus: '1.0'
-    # Use the healthcheck from Dockerfile (Node.js based) - override timing only
+    # Use curl healthcheck (now available in backend container)
     healthcheck:
-      test: ["CMD", "node", "-e", "require('http').get('http://localhost:4000/api/health', (r) => process.exit(r.statusCode === 200 ? 0 : 1))"]
+      test: ["CMD", "curl", "-f", "http://localhost:4000/api/health"]
       interval: 45s
       timeout: 10s
       retries: 5
