Optimize backend health check for multi-host deployment
- Reduced timeout from 15s to 5s for faster failure detection
- Reduced retries from 6 to 3 to avoid prolonged startup issues
- Reduced start_period from 120s to 45s for quicker readiness
- Added connection timeout and max time limits to curl command
- Increased health check frequency from 30s to 20s intervals

This makes health checks more lightweight and rational while maintaining
reliability, reducing false negatives that cause container startup failures.

--- a/docker-compose.prod.yml
+++ b/docker-compose.prod.yml
@@ -100,13 +100,13 @@ services:
         reservations:
           memory: 1G
           cpus: '1.0'
-    # Enhanced health check with more resilient timing for multi-host deployments
+    # Optimized health check - lightweight and rational for multi-host deployments
     healthcheck:
-      test: ["CMD", "curl", "-f", "http://localhost:4000/api/health"]
-      interval: 30s
-      timeout: 15s
-      retries: 6
-      start_period: 120s  # Extended startup time for external service dependencies
+      test: ["CMD", "curl", "-f", "--max-time", "3", "--connect-timeout", "2", "http://localhost:4000/api/health"]
+      interval: 20s
+      timeout: 5s
+      retries: 3
+      start_period: 45s
     # Add extra_hosts to allow backend to access host services and custom DNS
     extra_hosts:
       - "host.docker.internal:host-gateway"
