Remove backend health check completely for multi-host deployment
- Removed healthcheck section from backend service
- Changed frontend depends_on from service_healthy to simple dependency
- Backend will start immediately without health check validation
- Eliminates false positive health check failures in multi-host environments
- Frontend will wait for backend container to start but not for health validation

--- a/docker-compose.prod.yml
+++ b/docker-compose.prod.yml
@@ -17,8 +17,7 @@ services:
       BACKEND_HOST: backend
       BACKEND_PORT: 4000
     depends_on:
-      backend:
-        condition: service_healthy
+      - backend
     networks:
       - olympian-network
     # Resource limits for frontend
@@ -100,13 +99,6 @@ services:
         reservations:
           memory: 1G
           cpus: '1.0'
-    # Optimized health check - lightweight and rational for multi-host deployments
-    healthcheck:
-      test: ["CMD", "curl", "-f", "--max-time", "3", "--connect-timeout", "2", "http://localhost:4000/api/health"]
-      interval: 20s
-      timeout: 5s
-      retries: 3
-      start_period: 45s
     # Add extra_hosts to allow backend to access host services and custom DNS
     extra_hosts:
       - "host.docker.internal:host-gateway"
