Fix invalid NODE_OPTIONS flag causing backend startup failure
- Removed invalid '--optimize-for-size' flag from NODE_OPTIONS
- This flag is not recognized by Node.js and was causing container startup errors
- Kept valid '--max-old-space-size=2048' for memory management
- Backend should now start without Node.js option errors

--- a/docker-compose.prod.yml
+++ b/docker-compose.prod.yml
@@ -82,8 +82,8 @@ services:
       # CORS settings
       ALLOWED_ORIGINS: ${ALLOWED_ORIGINS:-http://localhost:8080}
       
-      # Memory and performance tuning for vision processing
-      NODE_OPTIONS: "--max-old-space-size=2048 --optimize-for-size"
+      # Memory tuning for vision processing
+      NODE_OPTIONS: "--max-old-space-size=2048"
     volumes:
       - config-data:/config/.olympian-ai-lite
       - logs:/app/logs
