--- a/docker/nginx/nginx.conf
+++ b/docker/nginx/nginx.conf
@@ -60,7 +60,67 @@ http {
             add_header Cache-Control "public, immutable";
         }
         
-        # API proxy with optimized settings for vision processing
+        # PROGRESSIVE LOADING API - Enhanced configuration for long-running model capability detection
+        location /api/progressive/ {
+            proxy_pass http://backend;
+            proxy_http_version 1.1;
+            proxy_set_header Connection "";
+            proxy_set_header Host $host;
+            proxy_set_header X-Real-IP $remote_addr;
+            proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+            proxy_set_header X-Forwarded-Proto $scheme;
+            
+            # EXTENDED TIMEOUTS for progressive model capability detection (15 minutes)
+            proxy_connect_timeout 30s;
+            proxy_send_timeout 900s;    # 15 minutes
+            proxy_read_timeout 900s;    # 15 minutes
+            
+            # Optimized for long-running requests
+            proxy_buffering off;        # Disable buffering for real-time updates
+            proxy_cache off;           # Disable caching for dynamic content
+            proxy_request_buffering off; # Important for Server-Sent Events
+            
+            # Allow for large responses (model capability data)
+            proxy_buffer_size 128k;
+            proxy_buffers 16 128k;
+            proxy_busy_buffers_size 256k;
+            
+            # Special headers for SSE (Server-Sent Events) support
+            proxy_set_header Cache-Control "no-cache";
+            proxy_set_header Connection "keep-alive";
+        }
+        
+        # MODEL CAPABILITY ENDPOINTS - Special handling for capability detection
+        location ~* /api/(models|chat)/(capabilities|vision-models) {
+            proxy_pass http://backend;
+            proxy_http_version 1.1;
+            proxy_set_header Connection "";
+            proxy_set_header Host $host;
+            proxy_set_header X-Real-IP $remote_addr;
+            proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+            proxy_set_header X-Forwarded-Proto $scheme;
+            
+            # MAXIMUM TIMEOUTS for model capability detection (20 minutes)
+            proxy_connect_timeout 30s;
+            proxy_send_timeout 1200s;   # 20 minutes
+            proxy_read_timeout 1200s;   # 20 minutes
+            
+            # Optimized buffering for large model capability responses
+            proxy_buffering on;
+            proxy_buffer_size 16k;
+            proxy_buffers 32 16k;
+            proxy_busy_buffers_size 32k;
+            proxy_temp_file_write_size 32k;
+            
+            # Request buffering for large capability detection requests
+            proxy_request_buffering on;
+            
+            # Add custom headers to track timeout handling
+            add_header X-Olympian-Timeout "1200" always;
+            add_header X-Olympian-Endpoint "model-capabilities" always;
+        }
+        
+        # STANDARD API proxy with optimized settings for vision processing
         location /api {
             proxy_pass http://backend;
             proxy_http_version 1.1;
@@ -70,7 +130,7 @@ http {
             proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
             proxy_set_header X-Forwarded-Proto $scheme;
             
-            # Extended timeouts for vision processing (increased to 10 minutes)
+            # Extended timeouts for vision processing (10 minutes)
             proxy_connect_timeout 30s;
             proxy_send_timeout 600s;
             proxy_read_timeout 600s;
@@ -112,6 +172,23 @@ http {
             access_log off;
             return 200 "healthy\n";
             add_header Content-Type text/plain;
+        }
+        
+        # Enhanced health check for model capability detection
+        location /health/model-capabilities {
+            proxy_pass http://backend/api/progressive/models/capabilities/stats;
+            proxy_http_version 1.1;
+            proxy_set_header Host $host;
+            proxy_set_header X-Real-IP $remote_addr;
+            proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+            proxy_set_header X-Forwarded-Proto $scheme;
+            
+            # Quick timeout for health checks
+            proxy_connect_timeout 5s;
+            proxy_send_timeout 10s;
+            proxy_read_timeout 10s;
+            
+            access_log off;
         }
     }
 }
