Add MODEL_CAPABILITY_MODE configuration for subproject 3
- Add new MODEL_CAPABILITY_MODE environment variable
- Options: 'automatic' for auto-detection or 'custom' for predefined capabilities
- Default to 'automatic' for backward compatibility
- Add documentation and example for multi-host deployment usage

--- a/.env.example
+++ b/.env.example
@@ -56,6 +56,14 @@ OLLAMA_HOST=http://localhost:11434
 OLLAMA_LOAD_BALANCER=round-robin
 
 # ===================================
+# MODEL CAPABILITY CONFIGURATION
+# ===================================
+# Model capability detection mode: 'automatic' or 'custom'
+# - automatic: Auto-detect model capabilities by testing models (slower, more accurate)
+# - custom: Use predefined model capabilities (faster, requires manual configuration)
+MODEL_CAPABILITY_MODE=automatic
+
+# ===================================
 # MCP SERVER CONFIGURATION
 # ===================================
 # Enable MCP server discovery
@@ -124,3 +132,4 @@ CHOKIDAR_USEPOLLING=false
 # OLLAMA_HOST=http://your-ollama-host:11434
 # MCP_HOSTS=your-mcp-host-1:8080,your-mcp-host-2:8080
 # EXTRA_HOSTS=- "your-ollama-host:192.168.1.100"
+# MODEL_CAPABILITY_MODE=custom
