Fix: Add MODEL_CAPABILITY_MODE environment variable to backend service
The MODEL_CAPABILITY_MODE environment variable was missing from the backend service 
configuration in docker-compose.prod.yml, causing the application to always default 
to "automatic" mode regardless of the interactive configuration setting.

This fix ensures that when users configure custom model capabilities during 
multi-host setup, their choice is properly passed to the Docker container.

- Add MODEL_CAPABILITY_MODE to backend environment variables
- Default to 'automatic' if not set in .env file
- Fixes subproject 3 (multi-host deployment) configuration issue

--- a/docker-compose.prod.yml
+++ b/docker-compose.prod.yml
@@ -70,6 +70,9 @@ services:
       SERVICE_DISCOVERY_ENABLED: ${SERVICE_DISCOVERY_ENABLED:-true}
       SERVICE_DISCOVERY_SUBNET: ${SERVICE_DISCOVERY_SUBNET:-192.168.1.0/24}
       
+      # Model capability configuration - CRITICAL for subproject 3
+      MODEL_CAPABILITY_MODE: ${MODEL_CAPABILITY_MODE:-automatic}
+      
       # Application settings
       NODE_ENV: production
       PORT: 4000
