Fix: Add MODEL_CAPABILITY_MODE environment variable to same-host deployment
Add missing MODEL_CAPABILITY_MODE environment variable to the backend service
in docker-compose.same-host.yml to ensure consistency across all subprojects.

This ensures that subproject 1 (same-host with Ollama container) can also
properly configure model capability modes when needed.

- Add MODEL_CAPABILITY_MODE to backend environment variables
- Default to 'automatic' if not set in .env file
- Fixes consistency issue across all deployment modes

--- a/docker-compose.same-host.yml
+++ b/docker-compose.same-host.yml
@@ -36,6 +36,8 @@ services:
       DEPLOYMENT_MODE: same-host
       MONGODB_URI: mongodb://olympian-mongodb:27017/olympian_ai_lite
       OLLAMA_HOST: http://olympian-ollama:11434
+      # Model capability configuration for subproject 1
+      MODEL_CAPABILITY_MODE: ${MODEL_CAPABILITY_MODE:-automatic}
       NODE_ENV: production
       PORT: 4000
       LOG_LEVEL: ${LOG_LEVEL:-info}
