Fix: Add MODEL_CAPABILITY_MODE environment variable to same-host-existing deployment
Add missing MODEL_CAPABILITY_MODE environment variable to the backend service
in docker-compose.same-host-existing-ollama.yml to ensure consistency across all subprojects.

This ensures that subproject 2 (same-host with existing Ollama) can also
properly configure model capability modes when needed.

- Add MODEL_CAPABILITY_MODE to backend environment variables
- Default to 'automatic' if not set in .env file
- Completes consistency fix across all three deployment modes

--- a/docker-compose.same-host-existing-ollama.yml
+++ b/docker-compose.same-host-existing-ollama.yml
@@ -37,6 +37,8 @@ services:
       DEPLOYMENT_MODE: same-host-existing-ollama
       MONGODB_URI: mongodb://olympian-mongodb:27017/olympian_ai_lite
       OLLAMA_HOST: http://host.docker.internal:11434
+      # Model capability configuration for subproject 2
+      MODEL_CAPABILITY_MODE: ${MODEL_CAPABILITY_MODE:-automatic}
       NODE_ENV: production
       PORT: 4000
       LOG_LEVEL: ${LOG_LEVEL:-info}
